<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancle1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancle1" />

        <Button
            android:id="@+id/ok1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/ok1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/add_person1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/add_person1" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/add_person1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/add_name1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_name1"
                android:paddingLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/add_adreess1"
                android:paddingLeft="15dp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#99ffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toast_num1"
        android:textColor="#0066ff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_num1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_border"
        android:hint="@string/input1"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#99ffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toast_email1"
        android:textColor="#0066ff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_email1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_border"
        android:hint="@string/hint_email1"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#99ffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/toast_group1"
        android:textColor="#0066ff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/add_group1"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_border"
        android:drawableRight="@drawable/down"
        android:hint="@string/hint_group1"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" />

</LinearLayout>