<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewMsgActivity" >

    <EditText
        android:id="@+id/receiver_person"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_border"
        android:hint="@string/receive_person_hint"
        android:paddingLeft="8dp" />

    <RelativeLayout
        android:id="@+id/new_msg_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#cccccc" >

        <EditText
            android:id="@+id/new_msg_context"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_border_pink" />

        <Button
            android:id="@+id/new_msg_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_msg_context"
            android:layout_marginLeft="50dp"
            android:text="@string/new_msg_send" />

        <Button
            android:id="@+id/new_msg_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/new_msg_context"
            android:layout_marginRight="50dp"
            android:text="@string/cancle1" />
    </RelativeLayout>

</RelativeLayout>