<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/msg_main_bottom_out2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/msg_main_cancle1"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="#ff6600"
                android:clickable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/cancle1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/msg_main_ok1"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="#66ffcc"
                android:clickable="false"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/ok1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/msg_main_bottom_out1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/msg_main_new"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/msg_main_new" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/msg_main_delete"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/call_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                android:id="@+id/msg_main_choose_all"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/call_choose_all" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/sms_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:fastScrollEnabled="true"
        android:soundEffectsEnabled="true" />

</RelativeLayout>